# worldquant-miner

./: .gitignore  AGENTS.md  CODEBASE_OVERVIEW.md
polymarket/: AGENTS.md  README.md  pyproject.toml
polymarket/artifacts/: cycle_1c962af30c1d41949009845011725c0d.html  cycle_1c962af30c1d41949009845011725c0d.json  cycle_ef38719f154348499bb4061d9576fb36.html  cycle_ef38719f154348499bb4061d9576fb36.json  cycle_f4ad294b228b4c72b2d1e60bebefcf3c.json  run_09a80a33d28a47ad964fa8d1801d4520.json  run_0d5ec4b083bc49c8a2f2d46af688de8d.html  run_0d5ec4b083bc49c8a2f2d46af688de8d.json  run_1945b5627a1d4cc1afb01ba4d2f7eb30.json  run_1d7317cb531e4d4eadcf868e8c60b578.json  run_1f7fcaf138b942dc8c48376153492f2f.html  run_1f7fcaf138b942dc8c48376153492f2f.json  run_6829af50b0b74795bb7d5143c7522ff4.json  run_6da50a484e564d08b156ea450e80cf30.json  run_7e999b54df2e4d878c57fcb076a2f4fb.html  run_7e999b54df2e4d878c57fcb076a2f4fb.json  run_c9e570c8f0014dc6a2a7d7f9adb8c342.html  run_c9e570c8f0014dc6a2a7d7f9adb8c342.json
polymarket/polymarket_core/: __init__.py  config.py
polymarket/polymarket_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
polymarket/polymarket_core/adapters/: __init__.py  credentials.py  market_adapter.py  mock_polymarket_adapter.py  (+1 more)
polymarket/scripts/: run_ai_agent.py  run_dashboard.py  run_e2e.py  run_full_cycle.py  run_research.py
polymarket/tests/: test_adapter_selection.py  test_agent_orchestrator.py  test_credentials_loader.py  test_e2e_pipeline.py  test_full_cycle_runner.py  test_live_safety.py  test_pipeline_smoke.py  test_web_dashboard.py
(+128 files in other folders)
